force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/Project_Budget_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mappings to match up Project Record Types with Project Cost and Cash Contribution (Project_Income__c) record types for use in the Project Budget tab (projectCostsFrom2 component).</description>
    <label>Project Budget Record Type Mapping</label>
    <pluralLabel>Project Budget Record Type Mapping</pluralLabel>
</CustomObject>