force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/fields/Cash_Contribu_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Cash_Contribu_Record_Type_Developer_Name__c</fullName>
    <description>Project_Income__c</description>
    <label>Cash Contribu Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>