force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <description>Created for Migration Record Types. Refers to the Programme on the Project record as these can then relate to one of various Cost/Cash Contribution record types.</description>
    <inlineHelpText>Created for Migration Record Types. Refers to the Programme on the Project record as these can then relate to one of various Cost/Cash Contribution record types.</inlineHelpText>
    <label>Programme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>