force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/fields/Project_Cost_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Record_Type_Developer_Name__c</fullName>
    <label>Project Cost Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>