force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/fields/Variation__c.field-meta.xml
<CustomField>
    <fullName>Variation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this if the mapping is to be used as a variation i.e as a &quot;duplicate&quot; component on the page.</description>
    <inlineHelpText>Mark this if the mapping is to be used as a variation i.e as a &quot;duplicate&quot; component on the page.</inlineHelpText>
    <label>Variation</label>
    <type>Checkbox</type>
</CustomField>