force-app/main/default/objects/Project_Budget_Record_Type_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Project_Record_Type_Developer_Name__c</columns>
    <columns>Project_Cost_Record_Type_Developer_Name__c</columns>
    <columns>Cash_Contribu_Record_Type_Developer_Name__c</columns>
    <columns>Variation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>